syntax = "proto3";

package im.terminal.go.srv.user;

service User {
    rpc QueryUserByName (Request) returns (Response) {
    }
}

message user {
    int64 id = 1;
    string name = 2;
	uint64 createdTime = 3;
    uint64 updatedTime = 4;
}

message Error {
    int32 code = 1;
    string detail = 2;
}

message Request {
    string userID = 1;
    string userName = 2;
}

message Response {
    bool success = 1;
    Error error = 2;
    user user = 3;
}